# stock-analysis

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/agents/: implementation-validator.md  tech-researcher.md
.claude/commands/: acceptance-test.md  brainstorm.md  gen-all-docs.md  implement-feature.md  initial-setup.md  plan-feature.md  review-docs.md  update-docs.md  validate-code.md
.steering/20260129-docs-review/: review-report-2.md  review-report.md
.steering/20260129-stock-reader-data-interface/: acceptance-test-report.md  design.md  requirements.md  tasklist.md  validation-report.md
backend/analysis/: demo_integrated_analysis.py  high_low_ratio.py  integrated_analysis.py  integrated_analysis2.py  minervini.py  relative_strength.py
backend/config/: __init__.py  settings.py
backend/data/: master.db
backend/jquants/: data_processor.py  fundamentals_calculator.py  statements_processor.py
backend/market_reader/: __init__.py  exceptions.py  reader.py  utils.py
backend/technical_tools/: __init__.py  analyzer.py  backtest_results.py  backtester.py  charts.py  exceptions.py  indicators.py  integration.py  optimization_results.py  optimizer.py  screener.py  signals.py  virtual_portfolio.py
backend/yfinance/: data_processor.py
core/analysis/: high_low_ratio.py  integrated_analysis2.py  minervini.py  relative_strength.py
core/config/: __init__.py  settings.py
core/jquants/: data_processor.py  fundamentals_calculator.py  statements_processor.py
core/master/: master_db.py
core/utils/: cache_manager.py  parallel_processor.py
core/yfinance/: data_processor.py
docs/core/: CHANGELOG.md  api-reference.md  architecture.md  dev-guidelines.md  diagrams.md  repo-structure.md
notebook/: analysis_results_review.ipynb
notebooks/: analysis_results_review.ipynb  backtester_sample.ipynb  comprehensive_analysis_sample.ipynb  optimizer_sample.ipynb  stock_reader_demo.ipynb
scripts/: create_database_indexes.py  run_adhoc_integrated_analysis.py  run_daily_analysis.py  run_daily_jquants.py  run_monthly_master.py  run_weekly_tasks.py
stock_reader/: __init__.py  reader.py
tests/: benchmark_integrated_analysis_optimization.py  benchmark_jquants_performance.py  benchmark_optimizations.py  conftest.py  simple_test.py  test_analysis_integration.py  test_backtest_results.py  test_backtest_signals.py  test_backtester.py  test_chart_classification.py  test_data_processor.py  test_fixes.py  test_functions.py  test_fundamentals_calculator.py  test_high_low_ratio.py  test_integrated_analysis.py  test_integrated_analysis_optimization.py  test_integrated_scores.py  test_jquants_data_processor.py  test_jquants_performance.py  test_minervini.py  test_optimization_results.py  test_optimizations.py  test_optimizer.py  test_relative_strength.py  test_rsi_optimization.py  test_slack_notifier.py  test_statements_processor.py  test_stock_reader.py  test_stock_screener.py  test_technical_tools.py  test_type8_optimization.py  test_virtual_portfolio.py
(+67 files in other folders)
