[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-analysis"
version = "0.1.0"
description = "Japanese stock market data collection and analysis system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.14",
    "backtrader>=1.9.78.123",
    "black>=25.1.0",
    "bs4>=0.0.2",
    "fastdtw>=0.3.4",
    "ipykernel>=6.29.5",
    "japanize-matplotlib>=1.1.3",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "mypy>=1.16.1",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pydantic-settings>=2.0.0",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "ruff>=0.12.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "ta-lib>=0.6.4",
    "tqdm>=4.67.1",
    "xlrd>=2.0.2",
    "yfinance>=0.2.65",
    "python-dateutil>=2.8.0",
    "pytest-cov>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["backend", "."]
